--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -1,54 +1,78 @@
 .navbar {
-    background-color: white;
-    border-bottom-style: solid;
-    border-bottom-color: black;
-    padding: 10px;
-  }
-  
-  .nav-list-1 {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    margin-left: 5rem;
-  }
-  
-  .nav-list-2 {
-    list-style-type: none;
-    padding: 0;
-    margin-right: 2rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
-  .nav-item {
-    margin-right: 13px;
-  }
-  
-  .auth-item {
-    color: white;
-    margin-left: 20px;
-  }
-  
-  .nav-container {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .styled-link {
-    color: black;
-    text-decoration: none;
-    margin-left: 10px;
-    font-size: 1.1rem;
-    font-weight: bold;
-    font-family: Georgia;
-    cursor: pointer;
-  }
-  
-  .styled-link:hover {
-    color: #00C3FF;
-  }
+  background-color: white;
+  border-bottom-style: solid;
+  border-bottom-color: black;
+  padding: 10px;
+}
+
+.nav-list-1 {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  margin-left: 5rem;
+}
+
+.nav-list-2 {
+  list-style-type: none;
+  padding: 0;
+  margin-right: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-item {
+  margin-right: 13px;
+  position : relative;
+}
+
+.auth-item {
+  color: white;
+  margin-left: 20px;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.styled-link {
+  color: black;
+  text-decoration: none;
+  margin-left: 10px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  font-family: Georgia;
+  cursor: pointer;
+}
+
+.styled-link:hover {
+  color: #00a2ff;
+}
+
+.dropdown-item {
+  display: block;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  min-width : 180px;
+  padding : 13px;
+  border-radius: 15px;
+}
+
+.dropdown-item a{
+  color:black;
+  padding : 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-weight: 500;
+}
+
+.dropdown-item a:hover{
+  background-color: #aad6ff;
+  border-radius: 15px;
+}
