--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -1,3 +1,9 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+/* .notosanskr * { 
+ font-family: 'Noto Sans KR', sans-serif;
+} */
+
 .navbar {
   background-color: white;
   border-bottom-style: solid;
@@ -46,7 +52,7 @@
   margin-left: 10px;
   font-size: 1.1rem;
   font-weight: bold;
-  font-family: Georgia;
+  font-family: 'Noto Sans KR', sans-serif;
   cursor: pointer;
 }
 
