--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -41,12 +41,27 @@
   margin-left: 20px;
 }
 
+.user-item{
+  margin-right: 13px;
+  position : relative;
+}
+
 .nav-container {
   display: flex;
   justify-content: space-between;
 }
 
 .styled-link {
+  color: black;
+  text-decoration: none;
+  margin-left: 10px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  font-family: 'Noto Sans KR', sans-serif;
+  cursor: pointer;
+}
+
+.styled-user{
   color: black;
   text-decoration: none;
   margin-left: 10px;
