--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -1,3 +1,11 @@
+
+
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+/* .notosanskr * { 
+ font-family: 'Noto Sans KR', sans-serif;
+} */
+
 .wrapper {
     /* 스타일을 추가할 수 있습니다. */
   }
