--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -4,6 +4,12 @@
  font-family: 'Noto Sans KR', sans-serif;
 } */
 
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+/* font-family: "Lobster", sans-serif;
+font-weight: 400;
+font-style: normal; */
+
+
 .navbar {
   background-color: white;
   border-bottom-style: solid;
@@ -61,6 +67,17 @@
   cursor: pointer;
 }
 
+.styled-trip {
+  color: black;
+  text-decoration: none;
+  margin-left: 10px;
+  font-size: 2.5rem;
+  font-family: "Lobster", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  margin-right: 40px;
+}
+
 .styled-user{
   color: black;
   text-decoration: none;
@@ -72,7 +89,7 @@
 }
 
 .styled-link:hover {
-  color: #00a2ff;
+  color: grey;
 }
 
 .dropdown-item {
