--- a/src/pages/board/tripboard/tripdetail.css
+++ b/src/pages/board/tripboard/tripdetail.css
@@ -134,6 +134,27 @@
   border-radius: 10px;
 }
 
+.comment-container .info {
+  display: flex; /* 요소들을 가로로 배열합니다. */
+  justify-content: space-between; /* 요소들 사이의 여백을 최대한으로 설정하여 우측으로 정렬합니다. */
+  align-items: center; /* 요소들을 수직 가운데 정렬합니다. */
+}
+.comment-container .info button {
+  padding: 5px 10px; /* 버튼 내부 여백 설정 */
+  background-color: #383838;/* 버튼 배경색 설정 */
+  color: white; /* 버튼 텍스트 색상 설정 */
+  border: none; /* 버튼 테두리 없애기 */
+  border-radius: 10px; /* 버튼 모서리 둥글게 설정 */
+  cursor: pointer; /* 마우스 커서 모양 변경 */
+}
+.comment-container .info button:hover {
+  background-color: grey; /* 마우스를 올렸을 때 버튼 배경색 변경 */
+}
+
+.comment-container .info button:active {
+  background-color:grey; /* 버튼을 클릭했을 때 버튼 배경색 변경 */
+}
+
 .comment-container:last-child {
   border-bottom: none;
 }
@@ -146,4 +167,26 @@
 
 .content-box {
   margin-top: 10px; /* 작성자 정보와 내용 사이의 간격 조정 */
+}
+
+.comment-container:last-child {
+  border-bottom: none;
+}
+
+.child-comment {
+  margin-left: 30px; /* 자식 댓글을 들여쓰기하여 부모 댓글과 구분 */
+  background-color: #e0e0e0;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  position: relative; /* 상대 위치 지정 */
+}
+
+.child-comment::before {
+  content: '';
+  position: absolute;
+  top: 5px; /* 화살표의 위치 조정 */
+  left: -15px; /* 화살표의 위치 조정 */
+  border-width: 10px; /* 화살표의 크기 조정 */
+  border-style: solid;
+  border-color: transparent transparent transparent #b8b8b8; /* 화살표의 색상 조정 */
 }
