--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -92,29 +92,26 @@ font-style: normal; */
   color: grey;
 }
 
-/*dropdown*/
 .dropdown-item {
   display: block;
   position: absolute;
   background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  min-width : 180px;
-  padding : 13px;
-  border-radius: 15px;
-  z-index: 1000; /* 다른 요소보다 위에 표시되도록 높은 값 설정 */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  min-width : 200px;
+  padding : 10px;
+  border-radius: 20px;
+  z-index: 1000; /* 혹은 다른 고유한 값 */
 }
 
 .dropdown-item a{
-  color:black;
+  color: #2c2c2c;
   padding : 12px 16px;
   text-decoration: none;
   display: block;
-  font-weight: 500;
-  
+  font-weight: bold;
 }
 
 .dropdown-item a:hover{
-  background-color: #aad6ff;
+  background-color: rgb(230, 230, 230);
   border-radius: 15px;
-  
 }
