--- a/src/pages/board/mateboard/matedetail.css
+++ b/src/pages/board/mateboard/matedetail.css
@@ -14,7 +14,9 @@
   border: 1px solid #ddd;
   border-radius: 15px;
   padding: 30px;
-  height: 100%; /* 내용이 컨테이너를 벗어날 경우에도 전체 높이를 유지합니다 */
+  height: auto; /* 내용이 컨테이너를 벗어날 경우에도 전체 높이를 유지합니다 */
+  overflow: auto; /* 내용이 trippost-details를 벗어날 경우 스크롤바 표시 */
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .matepost-title {
@@ -30,19 +32,78 @@
 }
 
 .content-box {
-  border: 1px solid #aaaaaa;
+  border: 1px solid #cecece;
   background-color: rgb(255, 255, 255);
-  border-radius: 10px;
+  border-radius: 15px;
   margin-top: 15px;
-  padding: 5px 15px;
-  overflow-y: auto; /* 내용이 박스를 벗어날 경우 스크롤바를 표시합니다 */
-  height: calc(100% - 100px); /* 내용 박스의 높이를 조정 */
+  padding: 15px; /* 내용 상자의 패딩을 증가시킵니다 */
+  overflow-y: auto; /* 내용이 상자를 벗어날 경우 스크롤바를 표시합니다 */
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .matepost-content {
   margin-top: 10px;
   font-size: 15px;
-  height: 700px;
+  height: 500px;
+}
+
+.action-button {
+  padding : 7px;
+  width : 80px;
+  background-color: #3a3a3a;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-family: 'Noto Sans KR', sans-serif;
+  margin : 5px;
+}
+
+.action-buttons {
+  margin-top: 15px;
+  display: flex;
+  gap: 5px; /* 버튼 사이의 간격 */
+}
+
+.action-buttons button {
+  padding : 7px;
+  width : 100px;
+  background-color: #3a3a3a;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-family: 'Noto Sans KR', sans-serif;
+  margin: 5px;
+}
+
+.action-buttons button:hover {
+  background-color: #757575; /* 마우스 호버 시 배경색 변경 */
+}
+
+.edit-form {
+  background-color: #f9f9f9;
+}
+
+.edit-form input {
+  flex: 85%; /* 입력 필드의 너비를 설정 */
+  padding: 8px;
+  font-size: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-family: 'Noto Sans KR', sans-serif;
+  resize:none;
+}
+
+.edit-form textarea {
+  flex: 85%; /* 입력 필드의 너비를 설정 */
+  height: 500px; /* 내용 입력란에 대한 높이 설정 */
+  padding: 8px;
+  font-size: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-family: 'Noto Sans KR', sans-serif;
+  resize:none;
 }
 
 .error {
@@ -102,18 +163,13 @@
 
 .comment-semiheader {
   font-weight: bold;
-  margin-bottom: 10px;
   font-size: 18px;
   color :#2c2c2c;
-  margin-left : 5px;
+  margin-left : 15px;
 }
 
-.comment-semiheader {
-  font-weight: bold;
-  margin-bottom: 10px;
-  font-size: 18px;
-  color :#2c2c2c;
-  margin-left : 5px;
+.comment-list {
+  margin-top: 30px;
   font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -121,7 +177,13 @@
   border-bottom: 1px solid #ccc;
   padding-bottom: 5px;
   width: 98%;
-  margin-left: 5px;
+  margin-left: 10px;
+  margin-right: 5px; /* 오른쪽 여백을 5px로 지정 */
+}
+
+.depth-1 .comment-container {
+  border-bottom : none;
+  margin-left: 20px;
 }
 
 .comment-box {
@@ -130,13 +192,17 @@
 }
 
 .comment-container .info {
-  display: flex; /* 요소들을 가로로 배열합니다. */
-  justify-content: space-between; /* 요소들 사이의 여백을 최대한으로 설정하여 우측으로 정렬합니다. */
+  font-family: 'Noto Sans KR', sans-serif;
+  color: #757575;
+  font-size: 15px;
+  display: flex; /* 요소들을 플렉스 박스로 설정합니다. */
+  justify-content: space-between; /* 요소들을 좌우로 최대한으로 분배하여 정렬합니다. */
   align-items: center; /* 요소들을 수직 가운데 정렬합니다. */
 }
+
 .comment-container .info button {
-  padding: 5px 10px; /* 버튼 내부 여백 설정 */
-  background-color: #383838;/* 버튼 배경색 설정 */
+  padding: 5px 15px; /* 버튼 내부 여백 설정 */
+  background-color: #383838; /* 버튼 배경색 설정 */
   color: white; /* 버튼 텍스트 색상 설정 */
   border: none; /* 버튼 테두리 없애기 */
   border-radius: 10px; /* 버튼 모서리 둥글게 설정 */
@@ -147,29 +213,7 @@
   background-color: grey; /* 마우스를 올렸을 때 버튼 배경색 변경 */
 }
 
-.comment-container .info button:active {
-  background-color:grey; /* 버튼을 클릭했을 때 버튼 배경색 변경 */
-}
-
 
 .comment-container:last-child {
   border-bottom: none;
-}
-
-.child-comment {
-  margin-left: 30px; /* 자식 댓글을 들여쓰기하여 부모 댓글과 구분 */
-  background-color: #e0e0e0;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  position: relative; /* 상대 위치 지정 */
-}
-
-.child-comment::before {
-  content: '';
-  position: absolute;
-  top: 5px; /* 화살표의 위치 조정 */
-  left: -15px; /* 화살표의 위치 조정 */
-  border-width: 10px; /* 화살표의 크기 조정 */
-  border-style: solid;
-  border-color: transparent transparent transparent #b8b8b8; /* 화살표의 색상 조정 */
 }
