--- a/src/pages/board/tripboard/tripboardlist.css
+++ b/src/pages/board/tripboard/tripboardlist.css
@@ -1,21 +1,22 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
-
 .trip-board-banner {
-  margin-top : 60px;
-  display: block;
-  font-size : 36px;
-  text-align: center;
-  color : #292929;
-  letter-spacing: 3px;
-  font-family: 'Noto Sans KR', sans-serif;
+  text-align: center; /* 텍스트를 가운데 정렬합니다. */
 }
+
+.trip-board-banner img {
+  max-width: 100%;
+  height: auto;
+  display: inline-block; /* 이미지를 인라인 블록 요소로 설정하여 가운데 정렬합니다. */
+}
+
+
 
 /* 여행 게시판 */
 .trip-board-main {
   font-size: 30px;
   font-weight: bold;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 50px;
   text-align: center;
   color: #292929;
