--- a/src/pages/board/tripboard/tripdetail.css
+++ b/src/pages/board/tripboard/tripdetail.css
@@ -19,48 +19,54 @@
     padding: 30px;
     height: auto; /* trippost-details의 높이를 700px로 고정 */
     overflow: auto; /* 내용이 trippost-details를 벗어날 경우 스크롤바 표시 */
+    font-family: 'Noto Sans KR', sans-serif;
   }
   
   .images-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-wrap: nowrap;
+    
     align-items: center;
     margin-top: 20px;
+    overflow-x: auto;
   }
   
   .post-image {
     margin: 10px;
-    max-width: 50%;
-    height: auto;
-  }
-  
+    max-width: 300px; /* 원하는 최대 너비 설정 */
+    max-height: 300px; /* 원하는 최대 높이 설정 */
+    width: auto; /* 이미지의 가로 크기 자동 조정 */
+    height: auto; /* 이미지의 세로 크기 자동 조정 */
+    cursor: pointer; /* 마우스 커서를 포인터로 변경하여 사용자에게 클릭 가능함을 알림 */
+}
 
 
 .trippost-title {
   font-size: 30px;
   letter-spacing: 2px;
   font-weight: bold;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .trippost-info {
   margin-bottom: 5px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .content-box {
-  border: 1px solid #aaaaaa;
+  border: 1px solid #cecece;
   background-color: rgb(255, 255, 255);
-  border-radius: 10px;
+  border-radius: 15px;
   margin-top: 15px;
   padding: 15px; /* 내용 상자의 패딩을 증가시킵니다 */
   overflow-y: auto; /* 내용이 상자를 벗어날 경우 스크롤바를 표시합니다 */
-
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .trippost-content {
-  margin-top: 10px;
   font-size: 15px;
-  height: 700px;
+  height: 500px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .error {
@@ -71,122 +77,32 @@
   color: gray;
 }
 
-.comment-header {
-  font-size: 23px;
-  color: #2c2c2c;
-  font-weight: 600;
-  margin: 30px 0px 10px 5px;
-  letter-spacing: 2px;
-}
 
-.comment-section {
-  margin-top: 5px;
-  padding: 10px;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  display: block;
-}
-
-.comment-section form {
-  display: flex;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
-.comment-section textarea {
-  flex: 1;
-  padding: 10px;
-  margin: 5px;
-  letter-spacing: 1px;
-  border-radius: 15px;
-  height: 70px;
-  resize: none;
-}
-
-.comment-section button {
-  padding: 10px 20px;
-  background-color: #3a3a3a;
-  color: #ffffff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin : 5px;
-}
-
-.comment-semiheader {
-  font-weight: bold;
-  margin-bottom: 10px;
-  font-size: 18px;
-  color :#2c2c2c;
-  margin-left : 5px;
-}
-
-.comment-container {
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 5px;
-  width: 98%;
-  margin-left: 5px;
-}
-
-.comment-box {
-  padding: 10px;
-  border-radius: 10px;
-}
-
-.comment-container .info {
-  display: flex; /* 요소들을 가로로 배열합니다. */
-  justify-content: space-between; /* 요소들 사이의 여백을 최대한으로 설정하여 우측으로 정렬합니다. */
-  align-items: center; /* 요소들을 수직 가운데 정렬합니다. */
-}
-.comment-container .info button {
-  padding: 5px 10px; /* 버튼 내부 여백 설정 */
-  background-color: #383838;/* 버튼 배경색 설정 */
-  color: white; /* 버튼 텍스트 색상 설정 */
-  border: none; /* 버튼 테두리 없애기 */
-  border-radius: 10px; /* 버튼 모서리 둥글게 설정 */
-  cursor: pointer; /* 마우스 커서 모양 변경 */
-}
-.comment-container .info button:hover {
-  background-color: grey; /* 마우스를 올렸을 때 버튼 배경색 변경 */
-}
-
-.comment-container .info button:active {
-  background-color:grey; /* 버튼을 클릭했을 때 버튼 배경색 변경 */
-}
-
-.comment-container:last-child {
-  border-bottom: none;
-}
-
-
-.info {
-  font-size: 15px;
-  color: #2c2c2c;
-}
 
 .content-box {
-  margin-top: 10px; /* 작성자 정보와 내용 사이의 간격 조정 */
+  margin-top: 0px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
-.comment-container:last-child {
-  border-bottom: none;
+textarea {
+  width: 90%;
+  padding: 10px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
-.child-comment {
-  margin-left: 30px; /* 자식 댓글을 들여쓰기하여 부모 댓글과 구분 */
-  background-color: #e0e0e0;
+button[type="submit"] {
+  background-color: #2c2c2c;
+  color: white;
+  padding: 10x 15px;
+  border: none;
   border-radius: 10px;
-  margin-bottom: 10px;
-  position: relative; /* 상대 위치 지정 */
+  cursor: pointer;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
-.child-comment::before {
-  content: '';
-  position: absolute;
-  top: 5px; /* 화살표의 위치 조정 */
-  left: -15px; /* 화살표의 위치 조정 */
-  border-width: 10px; /* 화살표의 크기 조정 */
-  border-style: solid;
-  border-color: transparent transparent transparent #b8b8b8; /* 화살표의 색상 조정 */
+button[type="submit"]:hover {
+  background-color: #696969;
 }
