--- a/src/pages/filter/section/section.css
+++ b/src/pages/filter/section/section.css
@@ -42,7 +42,7 @@
   width: 100%; /* 가로 폭을 100%로 설정 */
   text-align: center; /* 가운데 정렬 */
   z-index: 1; /* 다른 요소 위에 오도록 설정 */
-  margin-top: 50px;
+  margin-top: 200px;
 }
 
 button.section-button {
@@ -111,6 +111,10 @@ button.section-button {
 
 }
 /*체크박스 형태*/
+.select-area{
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .select-area ul {
     list-style-type: none;
@@ -118,7 +122,7 @@ button.section-button {
 
   .checkbox-label {
     display: inline-block;
-    padding: 27px 40px;
+    padding: 18px 38px;
     margin: 15px;
     border: 2px solid #000;
     border-radius: 15px;
@@ -137,7 +141,10 @@ button.section-button {
     opacity: 0;
     position: absolute;
     padding: 40px 50px;
+    
   }
+
+
   
   /* 선택된 상태일 때 배경색 변경 */
   .checkbox-label.selected {
