--- a/src/pages/filter/section/section.css
+++ b/src/pages/filter/section/section.css
@@ -7,7 +7,7 @@
 
 .filtersection-container{
     overflow: hidden;
-    height: 91vh;
+    height: 91.5vh;
 }
 
 .section-container-box {
@@ -35,28 +35,29 @@
     position: relative; /* section-box를 relative로 설정 */
 }
 
-.section-button-container {
+.section1-button-container {
   position: absolute; /* 절대 위치로 설정 */
   bottom: 40px; /* 아래에 위치하되, 조금 위로 올려줌 */
   left: 0; /* 좌측에 위치하도록 설정 */
   width: 100%; /* 가로 폭을 100%로 설정 */
-  text-align: center; /* 가운데 정렬 */
-  z-index: 1; /* 다른 요소 위에 오도록 설정 */
+  text-align: center; /* 가운데 정렬 */  z-index: 1; /* 다른 요소 위에 오도록 설정 */
   margin-top: 200px;
 }
 
-button.section-button {
+button.section1-button {
   pointer-events: auto;
-  padding: 10px 30px;
+  padding: 20px 35px;
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 35px;
   border: 1px solid rgba(5, 5, 5, 0.1);
   border-radius: 15px;
   cursor: pointer;
+  background-color:rgba(205, 203, 203, 0.516) ;
+  color: #000;
 }
 
-.section-button:hover {
-  background-color: #d3ceceee;
+.section1-button:hover {
+  background-color: #908e8eee;
 }
 
 .link {
@@ -111,13 +112,23 @@ button.section-button {
 
 }
 /*체크박스 형태*/
-.select-area{
-  margin-left: auto;
-  margin-right: auto;
+.select-area {
+  display: flex;
+  justify-content: center; /* 수평 가운데 정렬 */
 }
 
 .select-area ul {
-    list-style-type: none;
+  display: flex;
+  justify-content: center;
+  list-style-type: none; /* 기본 리스트 마커 제거 */
+  padding: 0; /* 내부 패딩 제거 */
+  }
+
+  .select-area li {
+    flex: 1;
+    text-align: left;
+    margin-left:5%;
+    margin-right: 5%;
   }
 
   .checkbox-label {
