--- a/src/pages/filter/section/result.css
+++ b/src/pages/filter/section/result.css
@@ -200,3 +200,40 @@ img.empetyscrap_img{
   right: 0px; /* 상위 요소의 오른쪽에서 10px 떨어진 위치에 배치 */
   z-index: 1;
 }
+
+/*팝업*/
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-inner {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.popup-inner p {
+  margin-bottom: 10px;
+}
+
+.popup-inner button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.popup-inner button:hover {
+  background-color: #0056b3;
+}
