--- a/src/pages/map/showmap.css
+++ b/src/pages/map/showmap.css
@@ -7,18 +7,25 @@
     display: flex;
     height: 88vh;
     font-family: 'Noto Sans KR', sans-serif;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
+  }
+
+  
+  .map-container {
+    width: 80%;
+    position: relative;
+  }
+
+  #kakao-map {
+    width: 100%; /* 지도의 너비를 화면 너비의 100%로 설정 */
+    height: 100%; /* 지도의 높이를 400px로 설정 */
+    margin-bottom: 20px; /* 지도 아래에 여백 추가 */
   }
   
   .scrap-container {
     width: 20%;
     overflow-y: scroll;
     padding: 20px;
-  }
-
-  .map-container {
-    width: 80%;
-    position: relative;
   }
 
   .scrap-title {
@@ -30,7 +37,7 @@
     list-style: none;
     padding: 0;
   }
-  
+
   .scrap-list li {
     padding: 10px;
     margin-bottom: 15px;
@@ -45,6 +52,11 @@
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
     background-color: rgb(243, 243, 243);
   }
+
+  .scrap-list li.selected {
+    border: 2px solid #387eff;
+  }
+    
   
   .scrap-list li strong {
     margin : 0px 5px;
@@ -138,4 +150,13 @@ button {
 /* 버튼에 호버 효과 추가 */
 button:hover {
   background-color: #5a5a5a; /* 호버 시 배경색 변경 */
+}
+
+.marker-label {
+  background-color: #2c2c2c;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 600;
 }
