--- a/src/pages/map/showmap.css
+++ b/src/pages/map/showmap.css
@@ -10,7 +10,22 @@
     letter-spacing: 1px;
   }
 
-  
+  .map-and-chatbot-container {
+    position: relative; /* 자식 컨테이너를 relative로 설정 */
+    width: 100%;
+    height: 100%;
+  }
+  .chatbot-container {
+    position: absolute; /* 절대 위치로 설정하여 부모 컨테이너 기준으로 위치 조정 */
+    top: 0; /* 지도와 맞닿도록 상단에 위치 */
+    right: 0; /* 우측에 위치 */
+    max-height: 100vh;
+    background-color: #fff;
+    box-shadow: -2px 0 4px rgba(0, 0, 0, 0.1);
+    z-index: 10; /* 지도 아래에 위치하도록 설정 */
+    transition: transform 0.3s ease;
+  }
+
   .map-container {
     width: 80%;
     position: relative;
@@ -145,6 +160,7 @@ button {
   border-radius: 10px; /* 버튼 모서리를 둥글게 만듦 */
   cursor: pointer; /* 커서를 포인터로 변경하여 마우스 호버 시 인터랙션을 나타냄 */
   transition: background-color 0.2s ease; /* 배경색 변화에 대한 부드러운 전환 효과 추가 */
+  margin-right: 15px; /* 각 버튼 사이의 간격을 조정합니다. */
 }
 
 /* 버튼에 호버 효과 추가 */
