--- a/src/pages/map/showmap.css
+++ b/src/pages/map/showmap.css
@@ -154,7 +154,7 @@ button {
   font-family: 'Noto Sans KR', sans-serif;
   letter-spacing: 1px;
   padding: 10px 35px; /* 버튼 내부 여백 설정 */
-  background-color: #2c2c2c; /* 배경색 설정 */
+  background-color: #3f3f3f; /* 배경색 설정 */
   color: white; /* 글자색 설정 */
   border: none; /* 테두리 없앰 */
   border-radius: 10px; /* 버튼 모서리를 둥글게 만듦 */
