--- a/src/pages/filter/section/result.css
+++ b/src/pages/filter/section/result.css
@@ -6,7 +6,7 @@
 
 .result-container{
     overflow: hidden;
-    height: 91.5vh;
+    height: 92vh;
 }
 
 .result-container-box {
@@ -14,23 +14,24 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 92vh;
     max-width: 100%;
     margin-top:100px;
-    background-color:rgba(221, 248, 248, 0.6); /* 배경색을 빨간색으로 설정 */
+    background-color:rgba(231, 240, 255, 0.7); /* 배경색을 빨간색으로 설정 */
     overflow-y: hidden; /* 위와 아래 스크롤 숨기기 */
 }
 
-.section-box {
+.result-section-box {
     position: relative;
-    margin-top: 3%;
-    margin-bottom: 2.5%;
+    margin-top: 0.1%;
+    margin-bottom: 0%;
     padding: 10px;
     border: 1px solid black;
     width: 65%;
+    height: 80vh;
     background-color: white;
     align-items: center;
-    position: relative; /* section-box를 relative로 설정 */
+    
     overflow-y: auto; /* 세로 스크롤이 필요할 때만 스크롤이 표시됨 */
 }
 
@@ -137,7 +138,7 @@
 .pagination1 {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .pagination1 button {
