--- a/src/pages/map/showmap.css
+++ b/src/pages/map/showmap.css
@@ -43,6 +43,14 @@
     padding: 20px;
   }
 
+  .scrap-buttons {
+    position: sticky;
+    bottom: 0;
+    width : auto;
+    background-color: transparent;
+    z-index: 1; /* 다른 요소 위에 오도록 설정합니다. */
+  }
+
   .scrap-title {
     font-size: 25px;
     font-weight: 700;
@@ -54,6 +62,7 @@
   }
 
   .scrap-list li {
+    position: relative; /* 상대 위치로 설정하여 자식 요소에 대한 위치 조정 가능 */
     padding: 10px;
     margin-bottom: 15px;
     background-color: #ffffff;
@@ -135,6 +144,10 @@
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
     background-color: rgb(243, 243, 243);
   }
+
+  .search-result-item.selected {
+    border: 2px solid #387eff; /* 선택된 항목에 대한 테두리 스타일 */
+  }
   
   .search-list li strong {
     margin : 0px 5px;
@@ -149,11 +162,16 @@
     font-size: 0.9em;
     color: #666;
   }
+
+  .location-info {
+    display: inline-block;
+    max-width: calc(100% - 100px); /* 삭제 버튼의 최대 너비까지만 표시 */
+  }
   
 button {
   font-family: 'Noto Sans KR', sans-serif;
   letter-spacing: 1px;
-  padding: 10px 35px; /* 버튼 내부 여백 설정 */
+  padding: 15px 35px; /* 버튼 내부 여백 설정 */
   background-color: #3f3f3f; /* 배경색 설정 */
   color: white; /* 글자색 설정 */
   border: none; /* 테두리 없앰 */
@@ -176,3 +194,24 @@ button:hover {
   font-size: 14px;
   font-weight: 600;
 }
+
+.delete-button {
+  background-color: transparent;
+  border-radius: 15px;
+  padding : 5px 5px;
+  color: #2c2c2c;
+  border: none; /* 테두리 없음 */
+  cursor: pointer; /* 마우스 오버 시 커서 모양 */
+  font-size: 14px; /* 폰트 크기 */
+  position: absolute; /* 절대 위치로 설정하여 부모 요소에 대한 위치 설정 */
+  top: 5px; /* 상단 여백 조정 */
+  right: 5px; /* 우측 여백 조정 */
+  width: 20px;
+  height: 20px;
+}
+
+.delete-button:hover {
+  background-color: grey;
+}
+
+/* 추가적인 스타일링을 원하실 경우 여기에 추가하세요 */
