--- a/src/pages/filter/filter-main/filter-main.css
+++ b/src/pages/filter/filter-main/filter-main.css
@@ -6,10 +6,12 @@
 /* .notosanskr * { 
  font-family: 'Noto Sans KR', sans-serif;
 } */
+/* background-color: rgba(231, 240, 255, 0.7); */
 
 .filtermain-container{
   overflow: hidden;
-  height: 100vh;
+  height: 89vh;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .container-box {
@@ -17,96 +19,100 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  max-width: 100%;
-  margin-top:100px;
-  background-color:rgba(231, 240, 255, 0.7);
-  overflow-y: hidden; /* 위와 아래 스크롤 숨기기 */
+  height: 100%; /* 혹은 다른 값을 설정하여 레이아웃을 조정 */
+  margin-top: 100px;
+  background-color: rgba(231, 240, 255, 0.7);
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
+/* 텍스트 묶음 */
 .filter-text {
   text-align: center;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
+/* 여행지추천 */
 .text-main {
-  font-size: 60px;
-  font-weight: bold;
-  margin-bottom: 10px;
+  font-size: 55px;
+  font-weight: 600;
+  color: #2c2c2c;
+  margin-bottom: 30px;
+  /* background-color: rgba(175, 204, 255, 0.7);
+  border-radius: 50px;
+  width: 500px;
+  padding: 15px; */
   letter-spacing: 2px;
   margin-top: 0px;
 }
 
 .text-user {
   font-size: 25px;
-  font-weight: bold;
+  font-weight: 600;
   margin-bottom: 10px;
 }
 
 .text-ex {
   font-size: 16px;
-  color: #666;
+  color: #2c2c2c;
   margin-bottom: 20px;
 }
 
-.filter-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-
 .glassButton {
   background: #353535;
-  padding: 20px 35px;
-  width : 100px;
+  padding: 5px;
+  width : 200px;
+  border-radius: 50px;
   text-align: center;
-  border-radius: 30px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.glassButton:hover{
+  background-color: #555555; /* 호버 시 배경색 변경 */
+  transition: background-color 0.5s ease; /* 호버 효과를 부드럽게 만들기 위한 transition 속성 추가 */
 }
 
 .button-start {
   text-decoration: none;
   color: #fff;
-  font-size: 43px;
-  font-weight: bold;
+  font-size: 30px;
 }
 
 .popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: fixed; /* 고정 위치 */
+  top: 50%; /* 화면 세로 중앙에 위치 */
+  left: 50%; /* 화면 가로 중앙에 위치 */
+  transform: translate(-50%, -50%); /* 세로, 가로 중앙 정렬을 위한 변형 */
+  padding: 30px 50px;
+  border-radius: 10px;
+  z-index: 1000; /* 다른 요소 위에 표시 */
+  background-color: rgb(255, 255, 255); /* 배경색 및 투명도 지정 */
+  text-align: center; /* 버튼 가운데 정렬 */
 }
 
 .popup-content {
-  background: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  color: #2c2c2c; /* 텍스트 색상 */
 }
 
 .popup-content p {
-  font-size: 18px;
-  margin-bottom: 10px;
+  margin: 0; /* 문단의 상하 여백 제거 */
 }
 
 .popup-content button {
-  background: #27ae60;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
+  background-color: #383838; /* 버튼 배경색 */
+  color: white; /* 버튼 텍스트 색상 */
+  border: none; /* 테두리 제거 */
+  padding: 5px 15px; /* 버튼 안쪽 여백 */
+  border-radius: 10px; /* 버튼 모서리 둥글게 */
+  cursor: pointer; /* 커서 스타일 변경 */
+  margin-top: 20px; /* 위쪽 여백 추가 */
 }
 
 .popup-content button:hover {
-  background: #1e8449;
+  background-color: #5b5b5b; /* 호버 시 배경색 변경 */
 }
+
+
+
 .map {
-  width: 500px;
+  width: 350px;
 }
