--- a/src/pages/filter/section/result.css
+++ b/src/pages/filter/section/result.css
@@ -1,266 +1,168 @@
+/* result.css */
+
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 /* .notosanskr * { 
  font-family: 'Noto Sans KR', sans-serif;
 } */
 
-.result-container{
-    overflow: hidden;
-    height: 92vh;
+
+.result-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  height: 88vh;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .result-container-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 92vh;
-    max-width: 100%;
-    margin-top:100px;
-    background-color:rgba(231, 240, 255, 0.7); /* 배경색을 빨간색으로 설정 */
-    overflow-y: hidden; /* 위와 아래 스크롤 숨기기 */
+  margin-top: 100px;
+  height: 100%;
+  width: 80%;
+  max-width: 1200px;
 }
 
-.result-section-box {
-    position: relative;
-    margin-top: 0.1%;
-    margin-bottom: 0%;
-    padding: 10px;
-    border: 1px solid black;
-    width: 65%;
-    height: 80vh;
-    background-color: white;
-    align-items: center;
-    
-    overflow-y: auto; /* 세로 스크롤이 필요할 때만 스크롤이 표시됨 */
-}
+.section-text-box {
+  text-align: center;
 
-.text-box {
-    
 }
 
 .text {
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 40px;
-    font-weight: 500;
-    margin-bottom: 6%;
-    margin-top: 5%;
-    text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: 'Noto Sans KR', sans-serif;
+  /* background-color: rgb(212, 212, 212);
+  padding: 5px 10px;
+  border-radius: 30px; */
 }
 
-/* 결과화면 박스들 */
- .result-wrapper{
-    display:flex;
-    justify-content: center;
-    flex-wrap : wrap;
-    /* flex-direction: row;
-    flex-wrap : wrap;
-    width: 80%;
+.result-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 30px;
+  margin-top: 20px;
+}
 
-    margin:10% 3%; */
-    /* justify-content: center; 결과 박스들을 가운데 정렬합니다. */
-    /* max-height: 100%; .section-box 내부의 최대 높이로 설정 */
-    /* overflow-y: auto; 세로 스크롤이 필요할 때만 스크롤이 표시됨 */
-  } 
+.result {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  overflow: hidden;
+  font-family: 'Noto Sans KR', sans-serif;
+  transition: transform 0.3s ease;
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1); /* 그림자 효과 추가 */
+}
 
-.result{
-  height: 300px;
-	width: 235px;
-	border-radius: 15px;
-	display: inline-block;
-	margin-top:30px;
-  margin-left:30px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  overflow: hidden; /* 내부 컨텐츠를 넘어가는 부분을 숨김 */
-  position: relative;
-  padding-bottom: 0;
-  flex: 0 0 16%; /* 한 줄에 5개의 결과를 표시하기 위해 20%의 너비 할당 */
- }
-.result_img_div{
-    text-align: center;
-    margin: 0;
-  }
+.result:hover {
+  transform: scale(1.05); /* Scale up by 5% when hovering */
+}
 
-.result_img{
-    width:235px;
-    height:240px;
-    margin: 0;
-    margin-bottom: 4px;
-  }
+/* .result:hover {
+  transform: translateY(-5px);
+} 위로만*/
 
-.result_text {
-  margin: 0;
-  text-align: right;
-  margin-bottom: 20px;
+
+.result_img_div {
+  height: 200px;
+  overflow: hidden;
+}
+
+.result_img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.result-t {
+  align-items: center;
+  height: 70px;
+}
+
+.result_title,
+.result_title2 {
+  text-align: center;
 }
 
 .result_title {
-    font-size: 1.1rem;
-    font-weight: 600;
-    margin: 4%;
-    margin-top: 8px;
-    text-align: center;
-    white-space: normal; /* 텍스트가 카드를 넘어가면 다음 줄로 넘어감 */
-    display: -webkit-box;
-    -webkit-line-clamp: 2; /* 텍스트가 2줄까지만 표시됨 */
-    -webkit-box-orient: vertical;
-  }
-  
+  font-size: 1.1rem;
+}
 
- 
+.result_title2 {
+  font-size: 15px;
+  color: #757575;
+  padding: 0 10px;
+}
 
-
-
- /*하트 이미지*/
- .heart-button{
-  width:25px;
+.scrapbutton {
+  background: transparent;
+  color: #2c2c2c;  
   cursor: pointer;
-  margin-right:3.5px;
-  margin-top:7.5px;
-  position: absolute; /* 상위 요소에 대해 절대 위치로 설정 */
-  top: 10px; /* 상위 요소의 위쪽에서 10px 떨어진 위치에 배치 */
-  right: 10px; /* 상위 요소의 오른쪽에서 10px 떨어진 위치에 배치 */
-  z-index: 1;
- }
+  display: flex;
+  align-items: center; /* 추가: scrapbutton을 수직 가운데로 정렬 */
+  margin-left: auto; /* 추가: scrapbutton을 오른쪽으로 이동 */
+  padding: 10px;
+  font-size: 30px;
+}
+.scrapbutton:hover {
+  background: transparent;
+}
 
- .white-background {
-  width:31.5px;
-  margin-right:0px;
-  margin-top:3px;
-  border: 1px solid black;
-  position: absolute; /* 상위 요소에 대해 절대 위치로 설정 */
-  top: 0px; /* 상위 요소의 위쪽에서 10px 떨어진 위치에 배치 */
-  right: 0px; /* 상위 요소의 오른쪽에서 10px 떨어진 위치에 배치 */
-  border-radius: 50% ;
- }
 
-/* 페이지 네이션 스타일 */
 .pagination1 {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .pagination1 button {
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0);
-  color: #333;
-  cursor: pointer;
-  font-size: 14px;
+  margin: 0 5px;
   padding: 5px 10px;
-  margin: 0 2px;
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
-}
-
-.pagination1 button.active {
-  font-weight: bold;
+  border: none;
+  background-color: transparent;
+  color: #2c2c2c;
+  cursor: pointer;
+  border-radius: 10px;
 }
 
 .pagination1 button:hover {
-  font-weight: bold;
+  background-color: #afafaf;
 }
 
-/*스크랩 버튼*/
-.scrapbutton {
-  width: 5%; /* 수정된 너비 */
-  height:40px;
-  cursor: pointer;
-  margin-right:3.5px;
-  margin-top:7.5px;
-  position: absolute; /* 상위 요소에 대해 절대 위치로 설정 */
-  top: 10px; /* 상위 요소의 위쪽에서 10px 떨어진 위치에 배치 */
-  right: 10px; /* 상위 요소의 오른쪽에서 10px 떨어진 위치에 배치 */
-  background-color: rgba(0, 0, 0, 0);
-  border-radius: 50%; /* 원 모양으로 만듭니다. */
-  border: none; /* 테두리를 제거합니다. */
-  outline: none; /* 포커스 효과를 제거합니다. */
-}
-
-.scrapbutton:hover {
-  background-color: rgba(0, 0, 0, 0); /* 호버 시 배경색을 초기화합니다. */
-}
-
-img.scrap_img {
-  width:25px;
-  cursor: pointer;
-  margin-right:3.5px;
-  margin-top:7.5px;
-  position: absolute; /* 상위 요소에 대해 절대 위치로 설정 */
-  top: 0px; /* 상위 요소의 위쪽에서 10px 떨어진 위치에 배치 */
-  right: 0px; /* 상위 요소의 오른쪽에서 10px 떨어진 위치에 배치 */
-  z-index: 1;
-}
-
-img.empetyscrap_img{
-  width:25px;
-  cursor: pointer;
-  margin-right:3.5px;
-  margin-top:7.5px;
-  position: absolute; /* 상위 요소에 대해 절대 위치로 설정 */
-  top: 0px; /* 상위 요소의 위쪽에서 10px 떨어진 위치에 배치 */
-  right: 0px; /* 상위 요소의 오른쪽에서 10px 떨어진 위치에 배치 */
-  z-index: 1;
-}
-
-/*팝업*/
 .popup-result {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.popup-inner1 {
-  background-color: white;
-  padding: 40px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color:white;
+  padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  text-align: center;
 }
 
-.popup-inner1 p {
-  margin-bottom: 25px;
-}
-
-.popup-inner1 button {
-  padding: 8px 16px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.popup-inner1 button:hover {
-  background-color: #0056b3;
-}
-
+.popup-inner1,
 .popup-inner2 {
-  background-color: white;
-  padding: 30px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+  padding: 20px;
   text-align: center;
 }
 
+.popup-inner1 p,
 .popup-inner2 p {
-  margin-bottom: 20px;
+  font-size: 1.1rem;
+  margin-bottom: 10px;
 }
 
+.popup-inner1 button,
 .popup-inner2 button {
-  padding: 8px 16px;
-  background-color: #007bff;
-  color: white;
+  padding: 10px 20px;
+  background-color: #2f2f2f;
+  color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
+.popup-inner1 button:hover,
 .popup-inner2 button:hover {
-  background-color: #0056b3;
+  background-color: #5b5b5b;
 }
