--- a/src/pages/map/showmap.css
+++ b/src/pages/map/showmap.css
@@ -1,5 +1,12 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
+@font-face {
+  font-family: 'JalnanGothic';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/JalnanGothic.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /*font-family: 'Noto Sans KR', sans-serif;*/
 
 /* 전체 레이아웃 설정 */
