--- a/src/pages/filter/section/result.css
+++ b/src/pages/filter/section/result.css
@@ -19,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  height: 90vh;
+  height: 84vh;
   font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -31,18 +31,10 @@
 }
 
 .section-text-box {
-  
-}
-
-.text {
   font-size: 1.5rem;
   letter-spacing: 2px;
-  /* background-color: rgb(212, 212, 212);
-  width : 200px;
-  padding: 8px 10px;
-  border-radius: 30px; */
   font-family: 'JalnanGothic';
-  margin-bottom: 30px;
+  margin-top: 10px;
 }
 
 .result-wrapper {
