--- a/src/pages/chatbot/chatbot.css
+++ b/src/pages/chatbot/chatbot.css
@@ -27,6 +27,7 @@
   .custom-chatbot .rsc-header {
     background-color: #343434; /* 상단 배너 배경 색상 설정 */
     color: #fff; /* 상단 배너 텍스트 색상 설정 */
+    font-family: 'Noto Sans KR', sans-serif;
   }
 
   .message {
