feat: 스크랩 목록 확인, 게시판 css 수정

--- a/src/pages/filter/section/result.css
+++ b/src/pages/filter/section/result.css
@@ -30,12 +30,23 @@
   max-width: 1200px;
 }
 
-.section-text-box {
+.section-textbox {
   font-size: 1.5rem;
   letter-spacing: 2px;
   font-family: 'JalnanGothic';
   margin-top: 10px;
+  display: flex;
 }
+
+.toscrap {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 600;
+  text-decoration: none; /* 링크의 밑줄을 없앰 */
+  color : #2c2c2c;
+  font-size: 17px;
+  margin-left: auto; /* 오른쪽 끝에 배치 */
+}
+
 
 .result-wrapper {
   display: grid;
